Написал верстку компонента Main

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,7 +1,8 @@
+$white: #fff;
 $background: #0A192F;
 $gray-line: #f6f6f6;
 $orange: #fe5f1e;
 
-$container: 90%;
+$container: 70%;
 
 $duration: 0.15s;
