--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -3,15 +3,13 @@
 .header{
   font-family: 'Fira Code';
   border-bottom: 1px solid #64FFDA;
+  
+  padding: 28px  0;
 
   &__content {
     display: flex;
     justify-content: space-between;
     align-items: center;
-  }
-
-  &__logo {
-    padding: 20px 21px;
   }
 
   &__logo-link {
@@ -22,7 +20,10 @@
   &__nav {
     display: flex;
     align-items: center;
-    padding: 28px 40px 28px 0;
+
+    @media(max-width) {
+      
+    }
 
     ul {
       display: flex;
@@ -51,7 +52,6 @@
   &__origin {
     display: flex;
     align-items: center;
-    padding: 0 50px 0 0;
 
     img {
       width: 55px;
