Закончил компонент Main и сделал стилизацию

--- a/src/scss/libs/_normalize.scss
+++ b/src/scss/libs/_normalize.scss
@@ -3,7 +3,7 @@
   margin: 0;
   list-style: none;
   outline: none;
-  font-family: 'Fira Code', 'Fgalla One', system-ui, Tahoma, sans-serif;
+  font-family: 'Fira Code', 'Fjalla One', sans-serif;
   box-sizing: border-box;
 }
 
