--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -10,6 +10,10 @@ body {
   background-color: #0A192F;
 }
 
+.content {
+  padding: 170px 0 200px;
+}
+
 .container {
   width: $container;
   margin: 0 auto;
