Написал компонент About, сделал кнопку скачивания резюме

--- a/src/scss/components/_main.scss
+++ b/src/scss/components/_main.scss
@@ -1,6 +1,8 @@
 @import '../variables';
 
 .main {
+  margin-bottom: 270px;
+
   span {
     font-size: 21px;
     font-family: 'Fira Code' sans-serif;
