--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -5,9 +5,15 @@
 body {
   background-color: $background;
 }
-
 .wrapper {
+  height: 100%;
   background-color: #0A192F;
+  margin: 0 auto;
+
+  @media (max-width: 645px) {
+    width: calc(100vw - 30px);
+    margin-top: 15px;
+  }
 }
 
 .content {
@@ -18,8 +24,12 @@ body {
   width: $container;
   margin: 0 auto;
 
-  &--header {
-    width: 95%;
+  &--cart {
+    max-width: 820px;
+    margin: 90px auto;
+    .content__title {
+      margin: 0;
+    }
   }
 }
 
