--- a/src/scss/components/_about.scss
+++ b/src/scss/components/_about.scss
@@ -28,6 +28,12 @@
     }
   }
 
+  &__line {
+    svg {
+      max-width: 100%;
+    }
+  }
+
   &__content {
     display: flex;
     justify-content: space-between;
@@ -45,8 +51,9 @@
     }
   }
 
-  &__img {
-    max-width: 360px;
+  &__image-block {
+    padding: 50px 50px 0 0;
   }
+
 }
 
